--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 1.数据准备"
+    "## 1.数据准备\n",
+    "风险偏好\n",
+    "事件"
    ],
    "metadata": {
     "collapsed": false
@@ -140,8 +142,8 @@
     "def extract_panel():\n",
     "    # 个股K线数据\n",
     "    df_bar = (\n",
-    "        cudf.read_parquet('./DataSets/ASHARE_BAR_PANEL.parquet', columns=['trade_date', 'ts_code', 'pct_chg'])\n",
-    "        .rename(columns={'pct_chg': 'share_return'})\n",
+    "            cudf.read_parquet('./DataSets/ASHARE_BAR_PANEL.parquet', columns=['trade_date', 'ts_code', 'pct_chg'])\n",
+    "            .rename(columns={'pct_chg': 'share_return'})\n",
     "    )\n",
     "\n",
     "    # 个股基本面数据\n",
@@ -162,8 +164,8 @@
     "    from utils.sql import DB\n",
     "    db_loader = DB()\n",
     "    df_share_index = (\n",
-    "        pd.read_sql_table('399300.SZ', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', 'pct_chg'])\n",
-    "        .astype(dtype={'trade_date': 'uint32'}).set_index('trade_date').rename(columns={'pct_chg': 'shareindex_return'})\n",
+    "            pd.read_sql_table('399300.SZ', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', 'pct_chg'])\n",
+    "            .astype(dtype={'trade_date': 'uint32'}).set_index('trade_date').rename(columns={'pct_chg': 'shareindex_return'})\n",
     "    )\n",
     "\n",
     "    # shibor数据\n",
@@ -227,14 +229,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 108 ms, sys: 92.2 ms, total: 200 ms\n",
-      "Wall time: 199 ms\n"
+      "CPU times: user 109 ms, sys: 109 ms, total: 218 ms\n",
+      "Wall time: 216 ms\n"
      ]
     },
     {
@@ -242,7 +244,7 @@
       "text/plain": "                      share_return      total_mv        Idvol\ntrade_date ts_code                                           \n20140102   000001.SZ       -0.1641  1.002537e+07         <NA>\n           000002.SZ       -0.4972  8.799966e+06         <NA>\n           000004.SZ        1.3734  9.917646e+04         <NA>\n           000005.SZ       -0.4000  2.276691e+05         <NA>\n           000006.SZ       -1.2164  6.574476e+05         <NA>\n...                            ...           ...          ...\n20221128   873122.BJ       -2.0158  1.259199e+05  19.27363078\n           873169.BJ       -1.5198  5.443271e+04  1.319910083\n           873223.BJ       -0.2660  5.898188e+04  0.730762806\n           873339.BJ       -0.5093  1.290394e+05         <NA>\n           873527.BJ        0.0000  5.445873e+04         <NA>\n\n[7136670 rows x 3 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>share_return</th>\n      <th>total_mv</th>\n      <th>Idvol</th>\n    </tr>\n    <tr>\n      <th>trade_date</th>\n      <th>ts_code</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"5\" valign=\"top\">20140102</th>\n      <th>000001.SZ</th>\n      <td>-0.1641</td>\n      <td>1.002537e+07</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>000002.SZ</th>\n      <td>-0.4972</td>\n      <td>8.799966e+06</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>000004.SZ</th>\n      <td>1.3734</td>\n      <td>9.917646e+04</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>000005.SZ</th>\n      <td>-0.4000</td>\n      <td>2.276691e+05</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>000006.SZ</th>\n      <td>-1.2164</td>\n      <td>6.574476e+05</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th rowspan=\"5\" valign=\"top\">20221128</th>\n      <th>873122.BJ</th>\n      <td>-2.0158</td>\n      <td>1.259199e+05</td>\n      <td>19.27363078</td>\n    </tr>\n    <tr>\n      <th>873169.BJ</th>\n      <td>-1.5198</td>\n      <td>5.443271e+04</td>\n      <td>1.319910083</td>\n    </tr>\n    <tr>\n      <th>873223.BJ</th>\n      <td>-0.2660</td>\n      <td>5.898188e+04</td>\n      <td>0.730762806</td>\n    </tr>\n    <tr>\n      <th>873339.BJ</th>\n      <td>-0.5093</td>\n      <td>1.290394e+05</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>873527.BJ</th>\n      <td>0.0000</td>\n      <td>5.445873e+04</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n  </tbody>\n</table>\n<p>7136670 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +291,7 @@
     "\n",
     "# 加载滚动回归的面板数据集\n",
     "df_ols_panel = (\n",
-    "    cudf.read_parquet(f'{DATASETS_PATH}ASHARE_OLS_PANEL.parquet').reset_index().set_index(['trade_date', 'ts_code']).sort_index()\n",
+    "        cudf.read_parquet(f'{DATASETS_PATH}ASHARE_OLS_PANEL.parquet').reset_index().set_index(['trade_date', 'ts_code']).sort_index()\n",
     ")\n",
     "df_ols_panel"
    ],
@@ -376,14 +378,14 @@
    "source": [
     "# 转为时间序列数据\n",
     "df_series = (\n",
-    "    df_group_panel[['idvol_group_return']].groupby(level=['trade_date', 'idvol_group']).first().reset_index()\n",
-    "    .pivot(index='trade_date', columns='idvol_group', values='idvol_group_return').to_pandas()\n",
+    "        df_group_panel[['idvol_group_return']].groupby(level=['trade_date', 'idvol_group']).first().reset_index()\n",
+    "        .pivot(index='trade_date', columns='idvol_group', values='idvol_group_return').to_pandas()\n",
     ")\n",
     "\n",
     "# 合并其他时间序列数据\n",
     "df_series_join = (\n",
-    "    df_time_series.join(df_series).dropna(axis=0).reset_index().set_index(['trade_date', 'img_neg', 'tex_neg'])\n",
-    "    .drop(columns='riskfree_return')\n",
+    "        df_time_series.join(df_series).dropna(axis=0).reset_index().set_index(['trade_date', 'img_neg', 'tex_neg'])\n",
+    "        .drop(columns='riskfree_return')\n",
     ")\n",
     "\n",
     "df_series_join"
@@ -409,13 +411,11 @@
     "\n",
     "def transform():\n",
     "    df_series_join = (\n",
-    "        df_series_join.reset_index().reset_index().rename(columns={'index': 'time'})\n",
-    "        .set_index(['time', 'trade_date', 'img_neg', 'tex_neg'])\n",
+    "            df_series_join.reset_index().reset_index().rename(columns={'index': 'time'})\n",
+    "            .set_index(['time', 'trade_date', 'img_neg', 'tex_neg'])\n",
     "    )\n",
     "\n",
-    "    df_group_ols = transform_group_panel(df_series_join)\n",
-    "\n",
-    "# df_group_ols"
+    "    df_group_ols = transform_group_panel(df_series_join)\n"
    ],
    "metadata": {
     "collapsed": false
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -500,7 +500,24 @@
      "text": [
       "\n",
       ". //描述性统计\n",
-      ". //cd Outputs\n",
+      ". tabstat img_neg tex_neg HIGH LOW,s(N sd mean p50 min max ) f(%12.4f) c(s)\n",
+      "\n",
+      "    Variable |            N           SD         Mean          p50          Min\n",
+      "-------------+-----------------------------------------------------------------\n",
+      "     img_neg |    2031.0000       0.1434       0.2023       0.2143       0.0000\n",
+      "     tex_neg |    2031.0000       0.1503       0.1959       0.1951       0.0000\n",
+      "        HIGH |    2031.0000       2.0235       0.1532       0.2627      -9.7973\n",
+      "         LOW |    2031.0000       1.3661       0.1080       0.1252      -9.3061\n",
+      "-------------------------------------------------------------------------------\n",
+      "\n",
+      "    Variable |          Max\n",
+      "-------------+-------------\n",
+      "     img_neg |       1.0000\n",
+      "     tex_neg |       1.0000\n",
+      "        HIGH |      10.0025\n",
+      "         LOW |       6.8176\n",
+      "---------------------------\n",
+      "\n",
       ". \n"
      ]
     }
@@ -508,7 +525,7 @@
    "source": [
     "%%stata -d df_series_ols -force\n",
     "//描述性统计\n",
-    "//cd Outputs"
+    "tabstat img_neg tex_neg HIGH LOW,s(N sd mean p50 min max ) f(%12.4f) c(s)"
    ],
    "metadata": {
     "collapsed": false
@@ -653,7 +670,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 4.按照观测窗口构造投资策略(暂时不做)"
+    "## 4. 按照观测窗口构造投资策略(暂时不做)"
    ],
    "metadata": {
     "collapsed": false
