--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -458,6 +458,9 @@
     "def add_square_column(df, square_column: list): return pd.concat([df, df[square_column].pow(2).add_suffix('_s')], axis=1)\n",
     "\n",
     "\n",
+    "print('s')\n",
+    "\n",
+    "\n",
     "# 增加日期虚拟变量\n",
     "def add_dummy_column(df, column: str):\n",
     "    df_weekday = pd.get_dummies(pd.to_datetime(df[column], format='%Y%m%d').dt.weekday, prefix='weekday', drop_first=True)\n",
@@ -525,7 +528,7 @@
    "source": [
     "%%stata -d df_series_ols -force\n",
     "//描述性统计\n",
-    "tabstat img_neg tex_neg HIGH LOW,s(N sd mean p50 min max ) f(%12.4f) c(s)"
+    "tabstat img_neg tex_neg HIGH LOW, s(N sd mean p50 min max ) f(%12.4f) c(s)"
    ],
    "metadata": {
     "collapsed": false
@@ -640,27 +643,27 @@
    "source": [
     "%%stata -d df_series_ols -force\n",
     "//时间设定\n",
-    "ge time=_n\n",
+    "ge\n",
+    "time = _n\n",
     "tsset time\n",
     "est clear\n",
     "\n",
     "//VAR回归\n",
+    "foreach var in LOW HIGH HIGH HIGH{\n",
+    "    rename(`var' `var'_s) (return return_s)\n",
     "\n",
-    "foreach var in LOW HIGH HIGH HIGH {\n",
-    "   rename (`var' `var'_s) (return return_s)\n",
+    "    eststo: qui var return img_neg return, lags(1/5) exog(month_*weekday_*)\n",
+    "    estadd local Month \"Yes\", replace\n",
+    "    estadd local Weekday \"Yes\", replace\n",
     "\n",
-    "   eststo: qui var return img_neg return, lags(1/5) exog(month_* weekday_*)\n",
-    "   estadd local Month \"Yes\",replace\n",
-    "   estadd local Weekday \"Yes\",replace\n",
-    "\n",
-    "   rename  (return return_s) (`var' `var'_s)\n",
+    "    rename(return return_s) (`var' `var'_s)\n",
     "}\n",
     "\n",
     "//输出\n",
-    "esttab , keep(return:L*.img_neg) ///\n",
-    "star( * 0.1 ** 0.05 *** 0.01) ///\n",
-    "stats( Month Weekday  r2_1 N, fmt(%3s %3s  %12.4f %12.0f)) b(%12.4f) ///\n",
-    "title(\"Table1 VAR\") mtitle(\"LOW\" \"HIGH\" \"HIGH\" \"LOW\")  nogap ///\n",
+    "esttab, keep(return:L*.img_neg)///\n",
+    "star(*0.1 ** 0.05 ***0.01)///\n",
+    "stats( Month Weekday  r2_1 N, fmt(%3s%3s%12.4f%12.0f)) b(%12.4f)///\n",
+    "title(\"Table1 VAR\") mtitle(\"LOW\" \"HIGH\" \"HIGH\" \"LOW\")  nogap///\n",
     "mgroups(\"MV\" \"IDVOL\", pattern(1 0 1 0) )"
    ],
    "metadata": {
@@ -701,6 +704,7 @@
     "    df['mv_img'] = df['mv_img'].cumprod(axis=0)\n",
     "\n",
     "    return df.rename(columns={'mv_img': f'mv_img_{ma}'})\n",
+    "\n",
     "\n",
     "def start():\n",
     "    df_in = df_series\n",
