--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -375,12 +375,89 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "df_te2 = cudf.read_parquet('/data/DataSets/investor_sentiment/IDX_PANEL_PROFIT.parquet').to_pandas().query(\"ts_code=='000300.SH'\")\n",
-    "df_test = get_index_panel().to_pandas().query(\"ts_code=='000300.SH'\")"
+    "#### 计算分析师偏离指标"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                     quarter    profit  year_profit  year_pe_ttm\ntrade_year ts_code                                              \n2006       000300.SH  2006Q1    337.70      2537.62          NaN\n           000300.SH  2006Q2    615.51      2537.62          NaN\n           000300.SH  2006Q3    699.64      2537.62          NaN\n           000300.SH  2006Q4    884.77      2537.62          NaN\n2007       000300.SH  2007Q1   1159.82      5960.27          NaN\n...                      ...       ...          ...          ...\n2021       000300.SH  2021Q3   9370.53     36726.69        14.09\n           000300.SH  2021Q4   7951.16     36726.69        14.09\n2022       000300.SH  2022Q1  10115.02     32122.05        11.55\n           000300.SH  2022Q2  11414.03     32122.05        11.55\n           000300.SH  2022Q3  10593.00     32122.05        11.55\n\n[67 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>quarter</th>\n      <th>profit</th>\n      <th>year_profit</th>\n      <th>year_pe_ttm</th>\n    </tr>\n    <tr>\n      <th>trade_year</th>\n      <th>ts_code</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"4\" valign=\"top\">2006</th>\n      <th>000300.SH</th>\n      <td>2006Q1</td>\n      <td>337.70</td>\n      <td>2537.62</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>000300.SH</th>\n      <td>2006Q2</td>\n      <td>615.51</td>\n      <td>2537.62</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>000300.SH</th>\n      <td>2006Q3</td>\n      <td>699.64</td>\n      <td>2537.62</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>000300.SH</th>\n      <td>2006Q4</td>\n      <td>884.77</td>\n      <td>2537.62</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2007</th>\n      <th>000300.SH</th>\n      <td>2007Q1</td>\n      <td>1159.82</td>\n      <td>5960.27</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">2021</th>\n      <th>000300.SH</th>\n      <td>2021Q3</td>\n      <td>9370.53</td>\n      <td>36726.69</td>\n      <td>14.09</td>\n    </tr>\n    <tr>\n      <th>000300.SH</th>\n      <td>2021Q4</td>\n      <td>7951.16</td>\n      <td>36726.69</td>\n      <td>14.09</td>\n    </tr>\n    <tr>\n      <th rowspan=\"3\" valign=\"top\">2022</th>\n      <th>000300.SH</th>\n      <td>2022Q1</td>\n      <td>10115.02</td>\n      <td>32122.05</td>\n      <td>11.55</td>\n    </tr>\n    <tr>\n      <th>000300.SH</th>\n      <td>2022Q2</td>\n      <td>11414.03</td>\n      <td>32122.05</td>\n      <td>11.55</td>\n    </tr>\n    <tr>\n      <th>000300.SH</th>\n      <td>2022Q3</td>\n      <td>10593.00</td>\n      <td>32122.05</td>\n      <td>11.55</td>\n    </tr>\n  </tbody>\n</table>\n<p>67 rows × 4 columns</p>\n</div>"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " pd.read_parquet('/data/DataSets/investor_sentiment/IDX_PANEL_PROFIT.parquet').query(\n",
+    "        \"ts_code=='000300.SH'\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                      year_profit_yoy  CON_NP_YOY  opt_profit_yoy\ntrade_date ts_code                                               \n20140102   000300.SH         7.550883       13.29       76.005909\n20140103   000300.SH         7.550883       13.28       75.873474\n20140106   000300.SH         7.550883       13.23       75.211300\n20140107   000300.SH         7.550883       13.08       73.224778\n20140108   000300.SH         7.550883       13.10       73.489647\n...                               ...         ...             ...\n20221024   000300.SH       -12.537585       13.58      208.314320\n20221025   000300.SH       -12.537585       13.47      207.436958\n20221026   000300.SH       -12.537585       13.22      205.442954\n20221027   000300.SH       -12.537585       12.88      202.731108\n20221028   000300.SH       -12.537585       12.43      199.141900\n\n[2147 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>year_profit_yoy</th>\n      <th>CON_NP_YOY</th>\n      <th>opt_profit_yoy</th>\n    </tr>\n    <tr>\n      <th>trade_date</th>\n      <th>ts_code</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>20140102</th>\n      <th>000300.SH</th>\n      <td>7.550883</td>\n      <td>13.29</td>\n      <td>76.005909</td>\n    </tr>\n    <tr>\n      <th>20140103</th>\n      <th>000300.SH</th>\n      <td>7.550883</td>\n      <td>13.28</td>\n      <td>75.873474</td>\n    </tr>\n    <tr>\n      <th>20140106</th>\n      <th>000300.SH</th>\n      <td>7.550883</td>\n      <td>13.23</td>\n      <td>75.211300</td>\n    </tr>\n    <tr>\n      <th>20140107</th>\n      <th>000300.SH</th>\n      <td>7.550883</td>\n      <td>13.08</td>\n      <td>73.224778</td>\n    </tr>\n    <tr>\n      <th>20140108</th>\n      <th>000300.SH</th>\n      <td>7.550883</td>\n      <td>13.10</td>\n      <td>73.489647</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221024</th>\n      <th>000300.SH</th>\n      <td>-12.537585</td>\n      <td>13.58</td>\n      <td>208.314320</td>\n    </tr>\n    <tr>\n      <th>20221025</th>\n      <th>000300.SH</th>\n      <td>-12.537585</td>\n      <td>13.47</td>\n      <td>207.436958</td>\n    </tr>\n    <tr>\n      <th>20221026</th>\n      <th>000300.SH</th>\n      <td>-12.537585</td>\n      <td>13.22</td>\n      <td>205.442954</td>\n    </tr>\n    <tr>\n      <th>20221027</th>\n      <th>000300.SH</th>\n      <td>-12.537585</td>\n      <td>12.88</td>\n      <td>202.731108</td>\n    </tr>\n    <tr>\n      <th>20221028</th>\n      <th>000300.SH</th>\n      <td>-12.537585</td>\n      <td>12.43</td>\n      <td>199.141900</td>\n    </tr>\n  </tbody>\n</table>\n<p>2147 rows × 3 columns</p>\n</div>"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# 计算每日实际净利润\n",
+    "def merge_profit(df_basic, df_profit):\n",
+    "    # 指数基本面板数据计算\n",
+    "    df_basic['trade_year'] = df_basic.index.levels[0] // 10000\n",
+    "    # 利润数据\n",
+    "    df_profit = df_profit.groupby(level=['trade_year', 'ts_code']).first()[['year_profit']]\n",
+    "    df_profit['year_profit_l1'] = df_profit['year_profit'].shift(1)\n",
+    "    # 合并\n",
+    "    return pd.merge(df_basic.reset_index(), df_profit.reset_index(), on=['trade_year', 'ts_code'])\n",
+    "\n",
+    "\n",
+    "# 计算衍生指标\n",
+    "def cal_der(df):\n",
+    "    df['year_profit_yoy'] = ((df['year_profit'] / df['year_profit_l1']) - 1) * 100\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "# 分析师指数预期对比指标\n",
+    "df_analyst = (\n",
+    "        cudf.merge(\n",
+    "                # 指数基本面+利润\n",
+    "                (cudf.from_pandas(cal_der(\n",
+    "                        merge_profit(\n",
+    "                                get_index_panel().to_pandas().query(\"ts_code=='000300.SH'\"),\n",
+    "                                pd.read_parquet('/data/DataSets/investor_sentiment/IDX_PANEL_PROFIT.parquet').query(\n",
+    "                                        \"ts_code=='000300.SH'\")\n",
+    "                        )\n",
+    "                ))),\n",
+    "                # 分析师一致预期\n",
+    "                get_conidx_panel().reset_index(),\n",
+    "                on=['trade_date', 'ts_code'], sort=True\n",
+    "        )\n",
+    ").set_index(['trade_date', 'ts_code'])[['year_profit_yoy', 'CON_NP_YOY']].to_pandas()\n",
+    "\n",
+    "# 计算分析师偏离\n",
+    "df_analyst['opt_profit_yoy'] = ((df_analyst['CON_NP_YOY'] - df_analyst['year_profit_yoy']) / df_analyst['year_profit_yoy'].abs()) * 100\n",
+    "df_analyst"
    ],
    "metadata": {
     "collapsed": false
