--- a/analyzer/IS-Analyst.ipynb
+++ b/analyzer/IS-Analyst.ipynb
@@ -63,11 +63,13 @@
     "sys.path.append('/home/ubuntu/notebook/Investor-Sentiment')\n",
     "sys.path.append('/usr/local/stata17/utilities')\n",
     "\n",
+    "\n",
     "# 多核 groupby Apply\n",
     "from pandarallel import pandarallel\n",
     "\n",
     "# 数据库\n",
     "from utils.sql import DB\n",
+    "print()\n",
     "\n",
     "from loader.findata_loader import DownLoader\n",
     "from loader.findata_loader import Loader\n",
