--- a/analyzer/IS-Analyst.ipynb
+++ b/analyzer/IS-Analyst.ipynb
@@ -400,7 +400,7 @@
    ],
    "source": [
     "%%stata -d df_analyst -force\n",
-    "logout, save(Outputs/Table_Sum) text replace: tabstat  *_neg total_mv pe_ttm_weight , s(N sd mean p50 min max ) f(%12.4f) c(s)"
+    "logout, save(Investor-Sentiment/outputs/Table_Sum) word replace: tabstat  *_neg total_mv pe_ttm_weight , s(N sd mean p50 min max ) f(%12.4f) c(s)"
    ],
    "metadata": {
     "collapsed": false
@@ -476,7 +476,7 @@
     "estadd local Year \"Yes\" : *\n",
     "\n",
     "//输出\n",
-    "esttab using Outputs/analyst_sent,star(* 0.1 ** 0.05 *** 0.01) ///\n",
+    "esttab using Investor-Sentiment/outputs/analyst_sent_text,star(* 0.1 ** 0.05 *** 0.01) ///\n",
     "keep(*_neg L.total_mv L.pe_ttm_weight L.profit_avg ) ///\n",
     "stats( Year r2_a N, fmt(%3s %12.2f %12.0f)) ///\n",
     "title(\"Table1 Main Market\") mtitle(\"000010.SH\" \"000300.SH\" \"000903.SH\" \"000905.SH\" \"000906.SH\" \"000985.SH\") ///\n",
@@ -588,7 +588,7 @@
     }
    ],
    "source": [
-    "%%stata -d df_analyst_ols -force\n",
+    "%%stata -d df_analyst -force -qui\n",
     "est clear\n",
     "encode ts_code,gen(id)\n",
     "xtset id time\n",
@@ -599,9 +599,14 @@
     "//分组回归\n",
     "by id, sort : eststo:  qui reg  opt_profit L.img_neg  L.total_mv L.pe_ttm_weight L.profit_avg   i.trade_year   ///\n",
     "if inlist(ts_code ,\"000010.SH\",  \"000300.SH\", \"000903.SH\", \"000905.SH\",\"000906.SH\", \"000985.SH\"),r\n",
-    "esttab using Outputs/analyst_sent_img,star(* 0.1 ** 0.05 *** 0.01) ///\n",
+    "\n",
+    "//增加固定效应\n",
+    "estadd local Year \"Yes\" : *\n",
+    "\n",
+    "//输出\n",
+    "esttab using Investor-Sentiment/outputs/analyst_sent_img,star(* 0.1 ** 0.05 *** 0.01) ///\n",
     "keep(*_neg L.total_mv L.pe_ttm_weight L.profit_avg ) ///\n",
-    "stats(  r2_a N, fmt( %12.2f %12.0f)) ///\n",
+    "stats( Year r2_a N, fmt(%3s %12.2f %12.0f)) ///\n",
     "title(\"Table1 Main Market\") mtitle(\"000010.SH\" \"000300.SH\" \"000903.SH\" \"000905.SH\" \"000906.SH\" \"000985.SH\") ///\n",
     "long nogap  noeqlines  compress r"
    ],
