--- a/analyzer/IS-Analyst.ipynb
+++ b/analyzer/IS-Analyst.ipynb
@@ -551,9 +551,17 @@
     "//缩尾\n",
     "winsor2 opt_profit, cut(1 99) by(id) label\n",
     "\n",
-    "//分组回归\n",
-    "by id, sort : eststo:  qui reg  opt_profit L.tex_neg  L.total_mv L.pe_ttm_weight L.profit_avg   i.trade_year   ///\n",
-    "if inlist(ts_code ,\"000010.SH\",  \"000300.SH\", \"000903.SH\", \"000905.SH\",\"000906.SH\", \"000985.SH\"),r\n",
+    "//文本情绪回归\n",
+    "rename(tex_neg) (media_neg)\n",
+    "by id, sort : eststo:  qui reg  opt_profit L.media_neg  L.total_mv L.pe_ttm_weight L.profit_avg   i.trade_year   ///\n",
+    "if inlist(ts_code ,\"000010.SH\",  \"000300.SH\", \"000903.SH\", \"000985.SH\"),r\n",
+    "rename(media_neg) (tex_neg)\n",
+    "\n",
+    "//图像情绪回归\n",
+    "rename(img_neg) (media_neg)\n",
+    "by id, sort : eststo:  qui reg  opt_profit L.media_neg  L.total_mv L.pe_ttm_weight L.profit_avg   i.trade_year   ///\n",
+    "if inlist(ts_code ,\"000010.SH\",  \"000300.SH\", \"000903.SH\", \"000985.SH\"),r\n",
+    "rename(media_neg) (img_neg)\n",
     "\n",
     "//增加固定效应\n",
     "estadd local Year \"Yes\" : *\n",
@@ -562,7 +570,7 @@
     "esttab using Investor-Sentiment/outputs/analyst_sent_text,star(* 0.1 ** 0.05 *** 0.01) ///\n",
     "keep(*_neg L.total_mv L.pe_ttm_weight L.profit_avg ) ///\n",
     "stats( Year r2_a N, fmt(%3s %12.2f %12.0f)) ///\n",
-    "title(\"Table1 Main Market\") mtitle(\"000010.SH\" \"000300.SH\" \"000903.SH\" \"000905.SH\" \"000906.SH\" \"000985.SH\") ///\n",
+    "title(\"Table1 Main Market\") mtitle(\"000010.SH\" \"000300.SH\" \"000903.SH\" \"000985.SH\") ///\n",
     "long nogap  noeqlines  compress r"
    ],
    "metadata": {
