--- a/analyzer/IS-Analyst.ipynb
+++ b/analyzer/IS-Analyst.ipynb
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -512,22 +512,31 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "文本情绪影响"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
+      "no observations\n",
       "no observations\n",
       "no observations\n",
       "no observations\n",
@@ -567,69 +576,13 @@
     "estadd local Year \"Yes\" : *\n",
     "\n",
     "//输出\n",
-    "esttab using Investor-Sentiment/outputs/analyst_sent_text,star(* 0.1 ** 0.05 *** 0.01) ///\n",
+    "esttab using Investor-Sentiment/outputs/analyst_sent,r type ///\n",
+    "star(* 0.1 ** 0.05 *** 0.01) ///\n",
     "keep(*_neg L.total_mv L.pe_ttm_weight L.profit_avg ) ///\n",
     "stats( Year r2_a N, fmt(%3s %12.2f %12.0f)) ///\n",
     "title(\"Table1 Main Market\") mtitle(\"000010.SH\" \"000300.SH\" \"000903.SH\" \"000985.SH\") ///\n",
-    "long nogap  noeqlines  compress r"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "图像情绪影响"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "no observations\n",
-      "no observations\n",
-      "no observations\n",
-      "no observations\n",
-      "no observations\n",
-      "no observations\n",
-      "no observations\n",
-      "no observations\n",
-      "no observations\n",
-      "no observations\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%stata -d df_analyst -force -qui\n",
-    "est clear\n",
-    "encode ts_code,gen(id)\n",
-    "xtset id time\n",
-    "\n",
-    "//缩尾\n",
-    "winsor2 opt_profit, cut(1 99) by(id) label\n",
-    "\n",
-    "//分组回归\n",
-    "by id, sort : eststo:  qui reg  opt_profit L.img_neg  L.total_mv L.pe_ttm_weight L.profit_avg   i.trade_year   ///\n",
-    "if inlist(ts_code ,\"000010.SH\",  \"000300.SH\", \"000903.SH\", \"000905.SH\",\"000906.SH\", \"000985.SH\"),r\n",
-    "\n",
-    "//增加固定效应\n",
-    "estadd local Year \"Yes\" : *\n",
-    "\n",
-    "//输出\n",
-    "esttab   ,star(* 0.1 ** 0.05 *** 0.01) ///\n",
-    "keep(*_neg L.total_mv L.pe_ttm_weight L.profit_avg ) ///\n",
-    "stats( Year r2_a N, fmt(%3s %12.2f %12.0f)) ///\n",
-    "title(\"Table1 Main Market\") mtitle(\"000010.SH\" \"000300.SH\" \"000903.SH\" \"000905.SH\" \"000906.SH\" \"000985.SH\") ///\n",
-    "long nogap  noeqlines  compress r"
+    "mgroups(\"tex_neg\" \"img_neg\", pattern(1 0 0 0 1 0 0 0) ) ///\n",
+    "nogaps compress b(%12.4f)"
    ],
    "metadata": {
     "collapsed": false
@@ -646,69 +599,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Contains data\n",
-      " Observations:        23,565                  \n",
-      "    Variables:            46                  \n",
-      "-------------------------------------------------------------------------------\n",
-      "Variable      Storage   Display    Value\n",
-      "    name         type    format    label      Variable label\n",
-      "-------------------------------------------------------------------------------\n",
-      "trade_date      str9    %9s                   \n",
-      "ts_code         str9    %9s                   \n",
-      "CON_YEAR        long    %12.0g                \n",
-      "CON_OR          double  %10.0g                \n",
-      "CON_NP          double  %10.0g                \n",
-      "CON_EPS         double  %10.0g                \n",
-      "CON_NA          double  %10.0g                \n",
-      "CON_PB          double  %10.0g                \n",
-      "CON_PS          double  %10.0g                \n",
-      "CON_PE          double  %10.0g                \n",
-      "CON_PEG         double  %10.0g                \n",
-      "CON_ROE         double  %10.0g                \n",
-      "CON_OR_YOY      double  %10.0g                \n",
-      "CON_NP_YOY      double  %10.0g                \n",
-      "CON_NPCGRATE_2Y double  %10.0g                \n",
-      "CON_PEI         double  %10.0g                \n",
-      "trade_year      long    %12.0g                \n",
-      "profit          double  %10.0g                \n",
-      "year_profit     double  %10.0g                \n",
-      "year_pe_ttm     double  %10.0g                \n",
-      "year_profit_l1  double  %10.0g                \n",
-      "year_profit_yoy double  %10.0g                \n",
-      "code_name       str12   %12s                  \n",
-      "close           double  %10.0g                \n",
-      "pe_ttm_weight   double  %10.0g                \n",
-      "pe_ttm_equal    double  %10.0g                \n",
-      "pb_ttm_weight   double  %10.0g                \n",
-      "pb_ttm_equal    double  %10.0g                \n",
-      "div_rate        double  %10.0g                \n",
-      "roe             double  %10.0g                \n",
-      "profit_avg      double  %10.0g                \n",
-      "mv_avg          double  %10.0g                \n",
-      "float_mv        double  %10.0g                \n",
-      "total_mv        double  %10.0g                \n",
-      "total_mv_l1     double  %10.0g                \n",
-      "total_mv_chg    double  %10.0g                \n",
-      "close_l1        double  %10.0g                \n",
-      "close_chg       double  %10.0g                \n",
-      "img_neg         double  %10.0g                \n",
-      "tex_neg         double  %10.0g                \n",
-      "riskfree_return double  %10.0g                \n",
-      "opt_profit_yoy  double  %10.0g                \n",
-      "opt_pe          double  %10.0g                \n",
-      "opt_profit      double  %10.0g                \n",
-      "time            double  %10.0g                \n",
-      "close_chg_s     double  %10.0g                \n",
-      "-------------------------------------------------------------------------------\n",
-      "Sorted by: \n",
-      "     Note: Dataset has changed since last saved.\n",
       "\n",
       "Contains data\n",
       " Observations:        23,565                  \n",
@@ -779,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -800,8 +696,8 @@
       "\n",
       ". \n",
       ". //分组VAR回归\n",
-      ". by id, sort : eststo:  qui var close_chg opt_profit close_chg_s, lags(1/5) ex\n",
-      "> og(trade_year)\n",
+      ". by id, sort : eststo: qui var close_chg opt_profit close_chg_s, lags(1/5) exo\n",
+      "> g(trade_year)\n",
       "\n",
       "-------------------------------------------------------------------------------\n",
       "-> 000010.SH\n",
