--- a/notebooks/IS-Analyst.ipynb
+++ b/notebooks/IS-Analyst.ipynb
@@ -75,7 +75,7 @@
     "from statsmodels.regression.linear_model import OLS  #OLS回归\n",
     "\n",
     "# Stata\n",
-    "from pystata import config\n",
+    "from pystata import config  # noqa\n",
     "\n",
     "config.init('mp')\n",
     "# ------------------------------数据集路径----------------------------------#\n",
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -759,6 +759,7 @@
       "> title(\"Table1 Main Market\") mtitle(\"000010.SH\" \"000300.SH\" \"000903.SH\" \"00090\n",
       "> 5.SH\" \"000906.SH\" \"000985.SH\") ///\n",
       "> nogaps compress b(%12.4f)\n",
+      "(file Investor-Sentiment/outputs/analyst_idx.txt not found)\n",
       "\n",
       "Table1 Main Market\n",
       "-------------------------------------------------------------------------------\n",
