--- a/notebooks/IS-Investor.ipynb
+++ b/notebooks/IS-Investor.ipynb
@@ -3,7 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 投资者情绪专题"
+    "# 投资者情绪专题\n",
+    "使用所有的数据进行加总"
    ],
    "metadata": {
     "collapsed": false
@@ -20,39 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  ___  ____  ____  ____  ____ ©\n",
-      " /__    /   ____/   /   ____/      17.0\n",
-      "___/   /   /___/   /   /___/       MP—Parallel Edition\n",
-      "\n",
-      " Statistics and Data Science       Copyright 1985-2021 StataCorp LLC\n",
-      "                                   StataCorp\n",
-      "                                   4905 Lakeway Drive\n",
-      "                                   College Station, Texas 77845 USA\n",
-      "                                   800-STATA-PC        https://www.stata.com\n",
-      "                                   979-696-4600        stata@stata.com\n",
-      "\n",
-      "Stata license: Single-user 8-core , expiring  1 Jan 2025\n",
-      "Serial number: 501709301094\n",
-      "  Licensed to: Colin's Stata\n",
-      "               Love U\n",
-      "\n",
-      "Notes:\n",
-      "      1. Unicode is supported; see help unicode_advice.\n",
-      "      2. More than 2 billion observations are allowed; see help obs_advice.\n",
-      "      3. Maximum number of variables is set to 5,000; see help set_maxvar.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -74,7 +47,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "合并excel"
+    "合并Excel"
    ],
    "metadata": {
     "collapsed": false
@@ -83,42 +56,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/miniconda3/envs/Stata/lib/python3.9/site-packages/openpyxl/styles/stylesheet.py:226: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
-      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "file_path = '/home/ubuntu/notebook/DataSets/FORUM_SENT/'\n",
-    "df_merge = pd.DataFrame()\n",
-    "for i in os.listdir(file_path):\n",
-    "    if '.xlsx' in i:\n",
-    "        df_merge = pd.concat([df_merge, pd.read_excel(file_path + i)])\n",
-    "        break\n",
-    "df_merge"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "def excel_transform():\n",
+    "    \"\"\"\n",
+    "    转换excel\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "\n",
+    "    import multiprocessing as mp\n",
+    "\n",
+    "    file_path = '/home/ubuntu/notebook/DataSets/FORUM_SENT/'\n",
+    "    pool = mp.Pool(10)\n",
+    "\n",
+    "    # 任务函数\n",
+    "    def myfunc(name):\n",
+    "        df = pd.read_excel(file_path + name, header=0, engine='openpyxl', skiprows=[1, 2], dtype={'Stockcode': 'str', 'PostDate': 'str'})\n",
+    "        out_name = file_path + name[:-5] + '.parquet'\n",
+    "        df.to_parquet(out_name)\n",
+    "        return {name: out_name}\n",
+    "\n",
+    "    results = [pool.apply_async(myfunc, args=(name,)) for name in os.listdir(file_path) if '.xlsx' in name]\n",
+    "    results = [p.get() for p in results]\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "def merge_parquet():\n",
+    "    df_merge = pd.DataFrame()\n",
+    "    for i in os.listdir(file_path):\n",
+    "        if '.parquet' in i:\n",
+    "            df_merge = pd.concat([df_merge, pd.read_parquet(file_path + i)])\n",
+    "    df_merge.to_parquet('/data/DataSets/investor_sentiment/FORUM_SENT.parquet')"
+   ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   }
  ],
